--- a/src/assets/i18n/da.json
+++ b/src/assets/i18n/da.json
@@ -242,7 +242,7 @@
   "FORM": {
     "CREATE-NEW-APPLICATION": "Opret ny applikation",
     "CREATE-NEW-LORA-GATEWAY": "Opret ny LoRaWAN Gateway",
-    "CREATE-NEW-DATATARGET": "Opret nyt datatarget",
+    "CREATE-NEW-DATATARGET": "Redigér datatarget",
     "CREATE-NEW-IOT-DEVICE": "Tilføj en IoT enhed",
     "EDIT-NEW-GATEWAY": "Redigér LoRaWAN Gateway",
     "EDIT-NEW-APPLICATION": "Redigér applikation",
