--- a/src/assets/i18n/da.json
+++ b/src/assets/i18n/da.json
@@ -380,12 +380,14 @@
     },
     "DOWNLINK": {
       "TITLE": "Downlink",
-      "PAYLOAD": "payload",
-      "PORT": "Port",
+      "PAYLOAD": "Angiv det ønskede payload",
+      "PAYLOAD-PLACEHOLDER": "ADF12345",
+      "PORT": "Angiv den ønskede port",
       "CONFIRMEDDOWLINK": "Bekræft downlink",
       "START": "Sæt downlink i kø",
       "ERROR-SIGFOX-LENGTH": "Fejl i payload længde - payload må ikke overskride 16 karaktere",
-      "ERROR-FORMAT": "Fejl i formatet. Downlink skal være på hexidecimal format: a-f 0-9"
+      "ERROR-FORMAT": "Fejl i formatet. Downlink skal være på hexidecimal format: a-f 0-9",
+      "DESCRIPTION": "Her kan du starte et downlink til dit device."
     },
     "DETAIL-TAB": "Detail",
     "DOWNLINK-TAB": "Downlink",
