--- a/src/assets/i18n/da.json
+++ b/src/assets/i18n/da.json
@@ -320,7 +320,7 @@
       "TITLE": "SigFox specifikke felter",
       "CONNECTTOEXISTINGDEVICEINBACKEND": "Enheden er allerede registreret i SigFox?",
       "GROUPID": "Vælg en SigFox gruppe",
-      "DEVICEID": "SigFox enhed",
+      "DEVICEID": "SigFox enheds Id",
       "DEVICEID-PLACEHOLDER": "Enhedens unikke id",
       "DEVICETYPEID": "Vælg en enhedstypen",
       "DEVICETYPEID-PLACEHOLDER": "Enhedstype",
