IOT-53 adjust maxlength devid, add deviceid to detail view

--- a/src/assets/i18n/da.json
+++ b/src/assets/i18n/da.json
@@ -428,7 +428,8 @@
       "PROTOTYPE": "Er enheden en prototype",
       "PAC": "PAC",
       "ENDPRODUCTCERTIFICATE": "Produkt certifikat",
-      "DEVICETYPE": "Enhedstypen"
+      "DEVICETYPE": "Enhedstypen",
+      "DEVICEID": "EnhedsId"
     }
   },
   "MESSAGE": {
