IOT-679 add sigfox specific error, remove port for sigfox downlink

--- a/src/assets/i18n/da.json
+++ b/src/assets/i18n/da.json
@@ -405,6 +405,7 @@
       "DIALOG-CONFIRM": "Ja, overskriv",
       "NOTIMPLEMENTED": "Denne feature er endnu ikke implementeret den pågældende enhedstype",
       "NO-PORT-OR-PAYLOAD": "Angiv en port og en payload",
+      "NO-PAYLOAD": "Angiv en payload",
       "SIGFOX-PAYLOAD-LENGTH": "Downlink payload til sigfox skal være mellem 8 og 16 tegn (Hexadecimal)",
       "FORMAT-ERROR": "Payload skal angives som Hexadecimal"
     },
