--- a/src/assets/i18n/da.json
+++ b/src/assets/i18n/da.json
@@ -489,7 +489,8 @@
       "SAVE": "Gem",
       "CANCEL": "Annuller",
       "GOBACK": "Gå tilbage",
-      "ADDSERVICEPROFILE": "Redigér Service Profile"
+      "ADDSERVICEPROFILE": "Redigér Service Profile",
+      "ID": "Service profilens ID"
     },
     "DEVICE_PROFILE": {
       "DROPDOWN": "Håndter device profil",
@@ -530,7 +531,8 @@
       "CLASSBTIMEOUT_PLACEHOLDER": "0",
       "PINGSLOTDR_PLACEHOLDER": "0",
       "PINGSLOTFREQ_PLACEHOLDER": "0",
-      "CLASSCTIMEOUT_PLACEHOLDER": "0"
+      "CLASSCTIMEOUT_PLACEHOLDER": "0",
+      "ID": "Device profilens ID"
     }
   },
   "USERS": {
