finisg og styling

--- a/src/assets/i18n/da.json
+++ b/src/assets/i18n/da.json
@@ -130,7 +130,7 @@
   "LORA-GATEWAY-TABLE-ROW": {
     "DELETE": "Slet Gateway",
     "EDIT": "Redigér",
-    "SHOW-OPTIONS": "Vis muligheder"
+    "SHOW-OPTIONS": "Håndter Gateway"
   },
   "LORA-GATEWAY": {
     "CREATE": "Opret LoRaWAN Gateway"
