IOT-43: Login using KOMBIT adgangsstyring

--- a/src/assets/i18n/da.json
+++ b/src/assets/i18n/da.json
@@ -639,7 +639,8 @@
   },
   "AUTH": {
     "EMAIL": "Email",
-    "PASSWORD": "Adgangskode"
+    "PASSWORD": "Adgangskode",
+    "KOMBIT-BUTTON": "Login med KOMBIT Adgangsstyring"
   },
   "DASHBOARD": {
     "WELCOME": "Velkommen til OS2IoT",
