IOT-748 - add delete dialog on datatarget delete row.

--- a/src/assets/i18n/da.json
+++ b/src/assets/i18n/da.json
@@ -603,6 +603,12 @@
   "ERROR": {
     "SEMANTIC": "Semantisk fejl, verificer at navn og værdier er på det rigtige format"
   },
+  "DIALOG": {
+    "SAVE.TITLE": "Slet",
+    "DELETE.MESSAGE": "Vil du slette?",
+    "CLOSE": "Annuller",
+    "DIALOG-CONFIRM": "Ja, slet"
+  },
   "false": "Nej",
   "true": "Ja",
   "HTTP_PUSH": "HTTP Push",
