IOT-403 add to navbar, add routing, moved enums

--- a/src/assets/i18n/da.json
+++ b/src/assets/i18n/da.json
@@ -30,7 +30,8 @@
     "SIGFOX-ADMIN": "Sigfox Administration",
     "SIGFOX-DEVICE-TYPES": "SigFox Enhedstyper",
     "SEARCH": "Søgeresultater",
-    "MENU-ITEM-MISC": "Generelt"
+    "MENU-ITEM-MISC": "Generelt",
+    "DEVICE-MODEL": "Device Model"
   },
   "SEARCH": {
     "ICON": "",
