IOT-744 - fixed name

--- a/src/assets/i18n/da.json
+++ b/src/assets/i18n/da.json
@@ -111,6 +111,7 @@
     "TIMEOUT": "Timeout",
     "TYPE": "Type",
     "NAME": "Datatarget navn",
+    "SHOW-OPTIONS":"Håndter datatarget",
     "DELETE": "Slet",
     "RELATIONS": "Tilknyttede IoT enheder og payload decoders",
     "PAYLOADEDECODER": "Payload decoder navn:",
