IOT-768: Fix battery display, and only show battery display if available

--- a/src/assets/i18n/da.json
+++ b/src/assets/i18n/da.json
@@ -610,6 +610,9 @@
     "CLOSE": "Annuller",
     "DIALOG-CONFIRM": "Ja, slet"
   },
+  "BATTERY": {
+    "NOT_AVAILABLE": "N/A"
+  },
   "false": "Nej",
   "true": "Ja",
   "HTTP_PUSH": "HTTP Push",
