IOT-773 add text for 0 search results

--- a/src/assets/i18n/da.json
+++ b/src/assets/i18n/da.json
@@ -38,7 +38,8 @@
     "ID": "Id",
     "ORGANISATION": "Organisation",
     "PLACEHOLDER": "Der kan søges efter IoT enheder, applikationer og gateways",
-    "QUERY": "Du har søgt efter:"
+    "QUERY": "Du har søgt efter:",
+    "NO-RESULTS": "Søgningen førte til 0 resultater."
   },
   "SIGFOX": {
     "SIGFOX": "SigFox",
