--- a/src/assets/i18n/da.json
+++ b/src/assets/i18n/da.json
@@ -619,5 +619,6 @@
   "HTTP_PUSH": "HTTP Push",
   "Forbidden": "Du har ikke rettigheder til at foretage denne handling",
   "GENERIC_HTTP": "Generisk HTTP",
-  "LORAWAN": "LoRaWAN"
+  "LORAWAN": "LoRaWAN",
+  "SIGFOX": "SigFox"
 }
