IOT-767: Fix table sorting for other material tables

--- a/src/assets/i18n/da.json
+++ b/src/assets/i18n/da.json
@@ -126,7 +126,7 @@
   "APPLICATION-TABLE": {
     "NAME": "Navn",
     "IOT-DEVICES": "IoT Enheder",
-    "UPDATED": "Senest OpdateretT"
+    "UPDATED": "Senest Opdateret"
   },
   "IOT-TABLE": {
     "APPLICATION": "Applikation",
