add text to localisation

--- a/src/assets/i18n/da.json
+++ b/src/assets/i18n/da.json
@@ -29,7 +29,8 @@
     "SIGFOX": "SigFox",
     "SIGFOX-ADMIN": "Sigfox Administration",
     "SIGFOX-DEVICE-TYPES": "SigFox Enhedstyper",
-    "SEARCH": "Søgeresultater"
+    "SEARCH": "Søgeresultater",
+    "MENU-ITEM-MISC": "Generelt"
   },
   "SEARCH": {
     "ICON": "",
