Name fixed from demo

--- a/src/assets/i18n/da.json
+++ b/src/assets/i18n/da.json
@@ -136,7 +136,7 @@
     "NETWORK-TECHNOLOGY": "Netværksteknologi",
     "ALARM": "Alarm",
     "BATTERY": "Batteri",
-    "ACTIVE": "Aktiv",
+    "ACTIVE": "Sidst aktiv",
     "DATA": "Data(24 timer)"
   },
   "LORA-GATEWAY-TABLE": {
