--- a/src/assets/i18n/da.json
+++ b/src/assets/i18n/da.json
@@ -309,6 +309,7 @@
   "QUESTION": {
     "CREATE-IOT-DEVICE": "IoT-enhed",
     "DEVICE-MODEL-SELECT": "Tilknyt en device model til enheden",
+    "DEVICE-MODEL-SELECT-NON": "Ingen device model valgt",
     "GIVE-APPLICATION-NAME": "Navngiv applikation",
     "APPLICATION-NAME-PLACEHOLDER": "Applikationens navn",
     "GIVE-APPLICATION-DESCRIPTION": "Applikationens beskrivelse",
