init test payload decoder

--- a/src/assets/i18n/da.json
+++ b/src/assets/i18n/da.json
@@ -342,6 +342,12 @@
     "GIVE-PAYLOADDECODER-NAME": "Navngiv Payload Decoder",
     "GIVE-PAYLOADDECODER-NAME-PLACEHOLDER": "F.eks. Kloak sensor decoder",
     "GIVE-PAYLOADDECODER-DECODINGFUNCTION": "Payload Decoder funktion",
+    "GIVE-PAYLOADDECODER-CHOOSE-APPLICATION": "Vælg Applikation",
+    "GIVE-PAYLOADDECODER-CHOOSE-DEVICE": "Vælg Enhed",
+    "GIVE-PAYLOADDECODER-PAYLOAD": "Enhedens Payload",
+    "GIVE-PAYLOADDECODER-METADATA": "Enheden Metadata",
+    "GIVE-PAYLOADDECODER-TESTBUTTON": "Test din kode",
+    "GIVE-PAYLOADDECODER-OUTPUT": "Preview af Payload Decoder Output",
     "GIVE-ORGANISATION-NAME": "Navngiv organisation",
     "GIVE-ORGANISATION-NAME-PLACEHOLDER": "F.eks. 'Aarhus Kommune'",
     "OTAAAPPLICATIONKEY": "OTAA Applicationkey",
